<resources>
    <string name="app_name">hw2.2</string>
    <string name="Enters">Вход</string>
    <string name="welcome">Добро пожаловать !</string>
    <string name="log">Выполните вход \n или зарегистрируйтесь</string>
    <string name="mol">Введите вашу почту</string>
    <string name="password">Введите пароль.</string>
    <string name="batonEN">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="Click_me">Нажмите сюда!</string>
</resources>