<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dver"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/entersTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12sp"
        android:text="@string/Enters"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:text="@string/log"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/LL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="41dp">

        <EditText
            android:id="@+id/gmailEt"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:hint="@string/mol"
            android:paddingStart="12sp" />


        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginVertical="10dp"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="12sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGo"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/grey"
            android:text="@string/batonEN"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="5dp" />

        <TextView
            android:id="@+id/forgotPsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="91dp"
            android:textColor="@color/white"
            android:text="@string/forgot_password"
            android:textSize="11sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>